--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "url": "https://github.com/magic/mime-types/issues"
   },
   "devDependencies": {
-    "@magic-modules/git-badges": "github:magic-modules/git-badges",
-    "@magic-modules/light-switch": "github:magic-modules/light-switch",
-    "@magic-modules/pre": "github:magic-modules/pre",
-    "@magic-themes/docs": "github:magic-themes/docs",
-    "@magic/cli": "0.0.9",
-    "@magic/core": "github:magic/core",
+    "@magic-modules/gdpr": "0.0.4",
+    "@magic-modules/git-badges": "0.0.3",
+    "@magic-modules/light-switch": "0.0.2",
+    "@magic-modules/pre": "0.0.2",
+    "@magic-themes/docs": "0.0.2",
+    "@magic/cli": "0.0.10",
+    "@magic/core": "0.0.2",
     "@magic/fs": "0.0.1",
-    "@magic/test": "0.1.21",
+    "@magic/test": "0.1.23",
     "mime-db": "1.42.0"
   },
   "files": [
