--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "license": "AGPL-3.0",
   "homepage": "https://magic.github.io/mime-types",
   "main": "src/index.mjs",
-  "module": "src/index.mjs",
   "scripts": {
     "start": "npm test",
-    "build:db": "bin/bin.js build && npm run format",
-    "build:docs": "./bin/bin.js docs",
+    "build:db": "bin/bin.mjs build && npm run format",
+    "build:docs": "bin/bin.mjs docs",
     "test": "t --exclude docs example config.js",
     "format": "f -w --exclude docs",
     "format:check": "f",
@@ -21,9 +20,10 @@
     "serve": "magic serve",
     "dev": "magic dev"
   },
-  "engine": {
-    "node": ">=12.13.0"
+  "engines": {
+    "node": ">=13.5.0"
   },
+  "engineStrict": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/magic/mime-types.git"
@@ -36,11 +36,12 @@
     "@magic-modules/git-badges": "0.0.3",
     "@magic-modules/light-switch": "0.0.3",
     "@magic-modules/pre": "0.0.2",
-    "@magic-themes/docs": "0.0.2",
-    "@magic/cli": "0.0.10",
-    "@magic/core": "0.0.14",
-    "@magic/fs": "0.0.1",
-    "@magic/test": "0.1.25",
+    "@magic-themes/docs": "0.0.3",
+    "@magic/cli": "0.0.13",
+    "@magic/core": "0.0.18",
+    "@magic/format": "0.0.3",
+    "@magic/fs": "0.0.2",
+    "@magic/test": "0.1.28",
     "mime-db": "1.42.0"
   },
   "files": [
