--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "url": "https://github.com/magic/mime-types/issues"
   },
   "devDependencies": {
-    "@magic-modules/gdpr": "0.0.16",
     "@magic-modules/git-badges": "0.0.10",
     "@magic-modules/light-switch": "0.0.6",
     "@magic-modules/pre": "0.0.8",
@@ -52,5 +51,8 @@
       "name": "jascha ehrenreich",
       "github": "jaeh"
     }
-  ]
+  ],
+  "dependencies": {
+    "@magic-modules/no-spy": "0.0.1"
+  }
 }
