--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@magic-modules/git-badges": "0.0.10",
     "@magic-modules/light-switch": "0.0.6",
+    "@magic-modules/no-spy": "0.0.1",
     "@magic-modules/pre": "0.0.8",
     "@magic-themes/docs": "0.0.7",
     "@magic/cli": "0.0.28",
@@ -51,8 +52,5 @@
       "name": "jascha ehrenreich",
       "github": "jaeh"
     }
-  ],
-  "dependencies": {
-    "@magic-modules/no-spy": "0.0.1"
-  }
+  ]
 }
