bin: handle readfiles in await Promise.all, remove @magic/cli

--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   "main": "src/index.mjs",
   "scripts": {
     "start": "npm test",
-    "build:db": "bin/bin.mjs build && npm run format",
-    "build:docs": "bin/bin.mjs docs",
     "test": "t --exclude docs example config.js",
     "format": "f -w --exclude docs",
     "format:check": "f",
     "calls": "calls",
-    "build": "npm run build:db && npm run build:docs && NODE_ENV=production magic build",
+    "build": "bin/bin.mjs && npm run format && NODE_ENV=production magic build",
     "prod": "NODE_ENV=production magic build serve",
     "clean": "magic clean",
     "serve": "magic serve",
@@ -37,7 +35,6 @@
     "@magic-modules/no-spy": "0.0.5",
     "@magic-modules/pre": "0.0.9",
     "@magic-themes/docs": "0.0.11",
-    "@magic/cli": "0.0.29",
     "@magic/core": "0.0.91",
     "@magic/format": "0.0.17",
     "@magic/fs": "0.0.8",
