pkg: npm run test remove ignored dirs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "npm test",
-    "test": "t --exclude docs example config.js",
+    "test": "t --exclude docs",
     "format": "f -w --exclude docs",
     "format:check": "f",
     "calls": "calls",
