rename .mjs to .js, only docsrc/app.mjs remains

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "description": "mime-db, in a key => value store where keys are extensions and values are mime/types",
   "license": "AGPL-3.0",
   "homepage": "https://magic.github.io/mime-types",
-  "main": "src/index.mjs",
+  "main": "src/index.js",
   "types": "types/index.d.ts",
   "type": "module",
   "scripts": {
     "start": "npm test",
-    "build": "npm run build:docs && bin/bin.mjs && tsc && node scripts/strip-js-extension.js && npm run format",
+    "build": "npm run build:docs && bin/bin.js && tsc && node scripts/strip-js-extension.js && npm run format",
     "prepublishOnly": "npm run build",
     "test": "t --exclude docs",
     "format": "f -w --exclude docs",
