--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "scripts": {
     "start": "npm test",
-    "build": "npm run build:docs && bin/bin.js && tsc && node scripts/strip-js-extension.js && npm run format",
+    "build": "npm run build:docs && bin/bin.js && tsc && npm run format",
     "prepublishOnly": "npm run build",
     "test": "t --exclude docs",
     "format": "f -w --exclude docs",
